should only exist in gradle.properties